--- a/wp-content/themes/fipradotcom/sass/layout/_page-banner.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_page-banner.scss
@@ -2,6 +2,7 @@
   @include clearfix;
   font-family: $font__sans;
   color:white;
+  margin-top:-$v-rhythm;
   @include media($media__xlarge) { @include border-top-radius(4px); }
 
   background-position: center;
