--- a/wp-content/themes/fipradotcom/sass/pages/_unit.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_unit.scss
@@ -55,7 +55,7 @@
         margin-bottom:$v-rhythm;
         .country-list-flag { width: em(24px); height:em(16px); margin-right:em(5px); }
 
-        a { display:block; padding:$v-rhythm / 4 em(12px); background-color: lighten($color__fipra-light-gray, 5%);
+        a { display:block; padding:$v-rhythm / 2 em(12px);
           @include linear-gradient(lighten($color__fipra-light-gray, 5%) 80%, lighten($color__fipra-light-gray, 0%) 100%);
           @include border-top-radius(4px); @include border-bottom-radius(4px);
           border-bottom:1px solid darken($color__fipra-light-gray, 7%);
