--- a/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
@@ -13,6 +13,7 @@
   margin-right: em(16px);
   &:last-child { margin-right: 0; }
   &.no-margin { margin:0; }
+  &.btn-small { @include font-size(12); }
 
   &.primary {
     @include linear-gradient($color__fipra-blue 60%, darken($color__fipra-blue, 10%) 100%);
