--- a/wp-content/themes/fipradotcom/sass/layout/_page-header.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_page-header.scss
@@ -1,5 +1,5 @@
 .page-header {
-  margin-bottom:$v-rhythm * 3;
+  @include outer-container($container__content-width);
   &.left {
     text-align: left;
   }
@@ -18,4 +18,8 @@
       display: inline-block;
     }
   }
+}
+
+.page-header > #primary {
+  padding-top:0 !important;
 }
