--- a/wp-content/themes/fipradotcom/sass/layout/_layout.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_layout.scss
@@ -15,9 +15,26 @@
   @include media($media__xlarge) { padding-top:$v-rhythm * 2; }
   &.with-hero-banner { padding-top:0; }
 
+  #breadcrumbs {
+    padding-bottom:$v-rhythm * 2;
+    @include row();
+    @include outer-container($container__outer-width);
+    .breadcrumbs-content {
+      @include font-size(13);
+    }
+    color:darken(white, 35%);
+    .divider { padding:0 em(4px); }
+    .active { font-weight: $font__black; color:$color__fipra-blue-gray; }
+    a { font-weight: $font__bold; }
+
+    @include media(max-width $media__medium) { display:none; }
+    @include media(min-width $media__medium max-width $media__xlarge) { padding-top:$v-rhythm * 2; padding-left:em(40px); padding-right:em(40px); }
+
+  }
+
   #content {
     @include row();
-    @include outer-container($local-max-width: $container__outer-width);
+    @include outer-container($container__outer-width);
     background-color: white;
     padding-top: $v-rhythm;
     padding-bottom: $v-rhythm * 2;
