--- a/wp-content/themes/fipradotcom/sass/pages/_careers.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_careers.scss
@@ -1,3 +1,104 @@
+#page-banner {
+  &.careers {
+    @include media(max-width $media__small) { padding:$v-rhythm em(20px); }
+
+    #page-banner-content {
+      position:relative;
+      text-align: center;
+      @include media(min-width $media__medium max-width $media__large) { @include span-columns(12); }
+      @include media($media__large) { @include span-columns(6); }
+
+      h1 {
+        margin-top:-6px;
+      }
+
+      .circle-icon-outline {
+        @include media(max-width $media__small) { display:none; }
+        @include media(max-width $media__medium) {
+          @include font-size(24);
+          width:50px; height:50px;
+          line-height: 47px;
+          margin-bottom: $v-rhythm * 2;
+        }
+        @include media($media__medium) {
+          display:none;
+        }
+      }
+
+      .icon-tab {
+        @include media(max-width $media__medium) {
+          display:none;
+        }
+        @include media($media__medium) {
+          position:absolute; top: $v-rhythm * 2; left:-10px;
+          background-color: white;
+          color:$color__fipra-blue;
+          box-shadow: 1px 2px 1px rgba(black, 0.3);
+          padding:$v-rhythm em(6px) $v-rhythm em(26px);
+          @include font-size(32);
+          text-align: left;
+          border-top-right-radius: 7px;
+          border-bottom-right-radius: 7px;
+        }
+      }
+
+      .triangle {
+        display:none;
+        @include media($media__medium) { display:block; }
+        position:absolute;
+        bottom:-11px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        //    border-style: inset;
+        -webkit-transform:rotate(360deg);
+        left:0;
+        border-width: 0 10px 10px 0;
+        border-color: transparent rgba(darken(white, 70%), 0.4) transparent transparent;
+      }
+
+      @include media($media__medium) { padding:$v-rhythm * 12 em(40px) $v-rhythm * 3 !important;
+        text-align: left; }
+      @include media($media__large) { padding:$v-rhythm * 14 em(40px) $v-rhythm * 3 !important; }
+
+      &.dark-text {
+        h1 {
+          color: $color_soft-black !important;
+        }
+        h2 {
+          color: $color__fipra-blue;
+        }
+        .lead { color:$color__fipra-blue; }
+        .btn.secondary {
+          border:1px solid $color__fipra-blue;
+          color:$color__fipra-blue;
+          &:hover {
+            border:1px solid $color__fipra-blue-gray;
+            color:$color__fipra-blue-gray;
+          }
+        }
+      }
+    }
+  }
+}
+
+.job-listing-block {
+  margin-top:$v-rhythm;
+  border-top:1px solid darken(white, 20%);
+  padding:$v-rhythm 0;
+
+  .job-listing-title { @include font-size(22); font-weight: $font__bold; line-height: $v-rhythm * 2.5; }
+  .job-listing-meta { font-weight: $font__bold; color:$color__fipra-blue-gray; margin-bottom:$v-rhythm; }
+  .job-listing-overview { @include font-size(14);}
+  .job-listing-timestamp {
+    margin-bottom:$v-rhythm;
+    @include font-size(14);
+    color:$color__fipra-blue-gray;
+    @include media($media__medium) { text-align: right; margin-bottom:0; }
+    strong { color:$color__fipra-blue; }
+  }
+}
+
 .job-listing {
   p.lead { font-weight: $font__bold; }
 }
