--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -33,6 +33,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Alignments
 # Clearings
 # User Modules
+# Sidebar Modules
 # Widgets
 # Content
     ## Posts and pages
@@ -411,6 +412,8 @@ blockquote {
   font-size: 1.125rem;
   line-height: 1.65rem;
   font-style: normal; }
+  blockquote.no-margin {
+    margin-top: 0.75rem; }
   blockquote .quotemark {
     font-size: 32px;
     font-size: 2rem;
@@ -677,7 +680,7 @@ table:not(.no-style) {
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
-    padding: 0 20px; }
+    padding: 0 1.25em; }
     #header-container header.site-header::after {
       clear: both;
       content: "";
@@ -686,9 +689,9 @@ table:not(.no-style) {
       clear: both;
       content: "";
       display: table; }
-    @media screen and (min-width: 940px) {
+    @media screen and (min-width: 769px) {
       #header-container header.site-header {
-        padding: 0 40px; } }
+        padding: 0 2.5em; } }
     @media screen and (min-width: 1200px) {
       #header-container header.site-header {
         padding: 0; } }
@@ -2150,6 +2153,39 @@ table:not(.no-style) {
       padding-top: 1.5rem; } }
   #content-container.with-hero-banner {
     padding-top: 0; }
+  #content-container #breadcrumbs {
+    padding-bottom: 1.5rem;
+    display: block;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #a6a6a6; }
+    #content-container #breadcrumbs::after {
+      clear: both;
+      content: "";
+      display: table; }
+    #content-container #breadcrumbs::after {
+      clear: both;
+      content: "";
+      display: table; }
+    #content-container #breadcrumbs .breadcrumbs-content {
+      font-size: 13px;
+      font-size: 0.8125rem; }
+    #content-container #breadcrumbs .divider {
+      padding: 0 0.25em; }
+    #content-container #breadcrumbs .active {
+      font-weight: 900;
+      color: #5F697F; }
+    #content-container #breadcrumbs a {
+      font-weight: 700; }
+    @media screen and (max-width: 769px)  {
+      #content-container #breadcrumbs {
+        display: none; } }
+    @media screen and (min-width: 769px) and (max-width: 1200px)  {
+      #content-container #breadcrumbs {
+        padding-top: 1.5rem;
+        padding-left: 2.5em;
+        padding-right: 2.5em; } }
   #content-container #content {
     display: block;
     max-width: 1100px;
@@ -3976,6 +4012,38 @@ ul.anchor-links-list {
         clear: left; } }
 
 /*--------------------------------------------------------------
+# Sidebar Modules
+--------------------------------------------------------------*/
+ul.sidebar-list {
+  list-style-type: none;
+  font-family: 'Lato', Arial, Helvetica, sans-serif; }
+  ul.sidebar-list li {
+    display: block;
+    margin-bottom: 0.75rem; }
+    ul.sidebar-list li i {
+      font-size: 18px;
+      font-size: 1.125rem;
+      margin-right: 0.75em;
+      color: #8c867b; }
+    ul.sidebar-list li .sidebar-list-flag {
+      width: 1.5em;
+      height: 1em;
+      margin-right: 0.3125em; }
+    ul.sidebar-list li a {
+      display: block;
+      padding: 0.375rem 0.75em;
+      background-color: #f7f6f6;
+      background-image: -webkit-linear-gradient(#f7f6f6 80%, #ebeae8 100%);
+      background-image: linear-gradient(#f7f6f6 80%, #ebeae8 100%);
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+      border-bottom: 1px solid #dad9d5; }
+      ul.sidebar-list li a:hover {
+        background-color: #EBEAE8; }
+
+/*--------------------------------------------------------------
 # Widgets
 --------------------------------------------------------------*/
 .widget {
@@ -4156,30 +4224,6 @@ embed, iframe, object {
       #page-banner.unit #page-banner-content.dark-text .btn.secondary:hover {
         border: 1px solid #5F697F;
         color: #5F697F; }
-
-#secondary ul.country-list {
-  list-style-type: none;
-  font-family: 'Lato', Arial, Helvetica, sans-serif; }
-  #secondary ul.country-list li {
-    display: block;
-    margin-bottom: 0.75rem; }
-    #secondary ul.country-list li .country-list-flag {
-      width: 1.5em;
-      height: 1em;
-      margin-right: 0.3125em; }
-    #secondary ul.country-list li a {
-      display: block;
-      padding: 0.375rem 0.75em;
-      background-color: #f7f6f6;
-      background-image: -webkit-linear-gradient(#f7f6f6 80%, #ebeae8 100%);
-      background-image: linear-gradient(#f7f6f6 80%, #ebeae8 100%);
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px;
-      border-bottom: 1px solid #dad9d5; }
-      #secondary ul.country-list li a:hover {
-        background-color: #EBEAE8; }
 
 #page-banner.profile {
   background-position: 0 0, bottom left 0.625em, top left, 0 0;
@@ -4432,6 +4476,123 @@ embed, iframe, object {
     opacity: 1; }
   .owl-page span {
     background: #00257f !important; }
+
+@media screen and (max-width: 481px)  {
+  #page-banner.careers {
+    padding: 0.75rem 1.25em; } }
+#page-banner.careers #page-banner-content {
+  position: relative;
+  text-align: center; }
+  @media screen and (min-width: 769px) and (max-width: 940px)  {
+    #page-banner.careers #page-banner-content {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 100%; }
+      #page-banner.careers #page-banner-content:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 940px) {
+    #page-banner.careers #page-banner-content {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%; }
+      #page-banner.careers #page-banner-content:last-child {
+        margin-right: 0; } }
+  #page-banner.careers #page-banner-content h1 {
+    margin-top: -6px; }
+  @media screen and (max-width: 481px)  {
+    #page-banner.careers #page-banner-content .circle-icon-outline {
+      display: none; } }
+  @media screen and (max-width: 769px)  {
+    #page-banner.careers #page-banner-content .circle-icon-outline {
+      font-size: 24px;
+      font-size: 1.5rem;
+      width: 50px;
+      height: 50px;
+      line-height: 47px;
+      margin-bottom: 1.5rem; } }
+  @media screen and (min-width: 769px) {
+    #page-banner.careers #page-banner-content .circle-icon-outline {
+      display: none; } }
+  @media screen and (max-width: 769px)  {
+    #page-banner.careers #page-banner-content .icon-tab {
+      display: none; } }
+  @media screen and (min-width: 769px) {
+    #page-banner.careers #page-banner-content .icon-tab {
+      position: absolute;
+      top: 1.5rem;
+      left: -10px;
+      background-color: white;
+      color: #00257f;
+      box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.3);
+      padding: 0.75rem 0.375em 0.75rem 1.625em;
+      font-size: 32px;
+      font-size: 2rem;
+      text-align: left;
+      border-top-right-radius: 7px;
+      border-bottom-right-radius: 7px; } }
+  #page-banner.careers #page-banner-content .triangle {
+    display: none;
+    position: absolute;
+    bottom: -11px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    -webkit-transform: rotate(360deg);
+    left: 0;
+    border-width: 0 10px 10px 0;
+    border-color: transparent rgba(77, 77, 77, 0.4) transparent transparent; }
+    @media screen and (min-width: 769px) {
+      #page-banner.careers #page-banner-content .triangle {
+        display: block; } }
+  @media screen and (min-width: 769px) {
+    #page-banner.careers #page-banner-content {
+      padding: 9rem 2.5em 2.25rem !important;
+      text-align: left; } }
+  @media screen and (min-width: 940px) {
+    #page-banner.careers #page-banner-content {
+      padding: 10.5rem 2.5em 2.25rem !important; } }
+  #page-banner.careers #page-banner-content.dark-text h1 {
+    color: #222 !important; }
+  #page-banner.careers #page-banner-content.dark-text h2 {
+    color: #00257f; }
+  #page-banner.careers #page-banner-content.dark-text .lead {
+    color: #00257f; }
+  #page-banner.careers #page-banner-content.dark-text .btn.secondary {
+    border: 1px solid #00257f;
+    color: #00257f; }
+    #page-banner.careers #page-banner-content.dark-text .btn.secondary:hover {
+      border: 1px solid #5F697F;
+      color: #5F697F; }
+
+.job-listing-block {
+  margin-top: 0.75rem;
+  border-top: 1px solid #cccccc;
+  padding: 0.75rem 0; }
+  .job-listing-block .job-listing-title {
+    font-size: 22px;
+    font-size: 1.375rem;
+    font-weight: 700;
+    line-height: 1.875rem; }
+  .job-listing-block .job-listing-meta {
+    font-weight: 700;
+    color: #5F697F;
+    margin-bottom: 0.75rem; }
+  .job-listing-block .job-listing-overview {
+    font-size: 14px;
+    font-size: 0.875rem; }
+  .job-listing-block .job-listing-timestamp {
+    margin-bottom: 0.75rem;
+    font-size: 14px;
+    font-size: 0.875rem;
+    color: #5F697F; }
+    @media screen and (min-width: 769px) {
+      .job-listing-block .job-listing-timestamp {
+        text-align: right;
+        margin-bottom: 0; } }
+    .job-listing-block .job-listing-timestamp strong {
+      color: #00257f; }
 
 .job-listing p.lead {
   font-weight: 700; }
