--- a/wp-content/themes/fipradotcom/sass/layout/_page-banner.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_page-banner.scss
@@ -51,7 +51,7 @@
 
     &.dark-text {
       h2 {
-        color:$color__fipra-blue;
+//        color:$color__fipra-blue;
       }
       h1, .lead {
         color:$color_soft-black;
