--- a/wp-content/themes/fipradotcom/sass/layout/_team.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_team.scss
@@ -73,8 +73,7 @@
     @include font-size(18);
     padding:$v-rhythm em(12px);
     &:not(:last-child) { margin-bottom: $v-rhythm; }
-    background-color: lighten($color__fipra-light-gray, 5%);
-    @include linear-gradient(lighten($color__fipra-light-gray, 6%) 80%, lighten($color__fipra-light-gray, 0%) 100%);
+    @include linear-gradient(lighten($color__fipra-light-gray, 4%) 80%, darken($color__fipra-light-gray, 3%) 100%);
     @include media(min-width $media__small max-width $media__medium) {
       @include span-columns(6); @include omega(2n);
     }
@@ -88,14 +87,14 @@
 
     ul.team-member-expertise {
       list-style: none;
-      li { float:left; margin-right:em(6px); margin-bottom:$v-rhythm / 2; @include font-size(16);
+      li { float:left; margin-right:em(4px); margin-bottom:em(4px) !important; @include font-size(16);
         a {
           display:block;
           width:em(30px);
           height:em(30px);
           line-height:28px;
           text-align: center;
-          background-color:$color__fipra-turquoise;
+          background-color:$color__fipra-blue;
 //          @include linear-gradient($color__fipra-turquoise 50%, darken($color__fipra-turquoise, 5%) 90%);
           @include border-top-radius(50%);
           @include border-bottom-radius(50%);
