--- a/wp-content/themes/fipradotcom/sass/modules/_sidebar.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_sidebar.scss
@@ -8,10 +8,10 @@ ul.sidebar-list {
     .sidebar-list-flag { width: em(24px); height:em(16px); margin-right:em(5px); }
 
     a { display:block; padding:$v-rhythm / 2 em(12px);
-      @include linear-gradient(lighten($color__fipra-light-gray, 5%) 80%, lighten($color__fipra-light-gray, 0%) 100%);
+      @include linear-gradient(lighten($color__fipra-light-gray, 5%) 60%, lighten($color__fipra-light-gray, 0%) 100%);
       @include border-top-radius(4px); @include border-bottom-radius(4px);
       border-bottom:1px solid darken($color__fipra-light-gray, 7%);
-      &:hover { background-color: $color__fipra-light-gray; }
+      &:hover { opacity:0.7; }
     }
   }
 }
