--- a/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
@@ -1,10 +1,13 @@
 //Fipra colours
 $color__fipra-blue: #00257f;
+$color__fipra-soft-blue: desaturate(lighten($color__fipra-blue, 25%), 60%);
 $color__fipra-blue-gray: #5F697F;
 $color__fipra-periwinkle: #ccd3e5;
 $color__fipra-violet: #6f5ce5;
 $color__fipra-turquoise: #14b1cc;
 $color__fipra-light-gray: #EBEAE8;
+$color__fipra-orange: #DE8A56;
+$color__fipra-brown: #866551;
 $color__fipra-light-orange: #fce5c3;
 
 //Underscores colours
@@ -18,7 +21,7 @@ $color__background-ins: $color__fipra-periwinkle;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: $color__fipra-turquoise;
+$color__link: $color__fipra-blue;
 $color__link-visited: $color__fipra-violet;
 $color__link-hover: $color__fipra-blue-gray;
 $color__text-main: #222222;
